# lgcns-mlops-practice

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  batch_prediction.py  batch_prediction.sh  drift_detection.py  pyproject.toml  requirements.txt  retrain.py  retrain.sh  service.py  train.py
code_snippets/: batch_prediction.md  realtime_inference.md  setting_env.md
notebooks/: drift_detection.ipynb  online_serving.ipynb
src/: preprocess.py
src/common/: logger.py
