[project]
name = "lgcns-mlops-practice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kanto", email = "joshuaisland@gmail.com"},
]
dependencies = [
    "pandas>=2.1.4",
    "bentoml>=1.3.1",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.4",
    "mlflow>=2.15.1",
    "category-encoders>=2.6.3",
    "pydantic>=2.8.2",
    "deepchecks>=0.18.1",
    "joblib>=1.4.2",
    "rich>=13.7.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "mypy>=1.11.1",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.1.post1",
]
